[gd_scene load_steps=2 format=3 uid="uid://c6j8k3m4n5p6q"]

[ext_resource type="Script" path="res://Scripts/ProfileSelection.gd" id="1_script"]

[node name="ProfileSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "เลือกโปรไฟล์ผู้เล่น"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProfileList" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "สถานะ..."
horizontal_alignment = 1

[node name="CreatePanel" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Panel/VBoxContainer/CreatePanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NameInput" type="LineEdit" parent="Panel/VBoxContainer/CreatePanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "กรอกชื่อผู้เล่นใหม่..."

[node name="CreateBtn" type="Button" parent="Panel/VBoxContainer/CreatePanel/HBox"]
layout_mode = 2
text = " สร้างโปรไฟล์ใหม่ "

[node name="BackBtn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = " กลับไปหน้าเมนู "

[connection signal="pressed" from="Panel/VBoxContainer/CreatePanel/HBox/CreateBtn" to="." method="_on_create_btn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BackBtn" to="." method="_on_back_btn_pressed"]
